Initial models and views

--- a/test/fixtures/stores.yml
+++ b/test/fixtures/stores.yml
@@ -2,12 +2,12 @@
 
 one:
   name: MyString
-  email: MyString
-  password_digest: MyString
+  description: MyString
+  address: MyString
   phone: MyString
 
 two:
   name: MyString
-  email: MyString
-  password_digest: MyString
+  description: MyString
+  address: MyString
   phone: MyString
