--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
   - name: hair_production
     databaseName: hair_production
-    user: mysite
+    user: hair_production
     plan: free
 
 services:
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: hair_production
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
